src/objects/Associated_Licensee__c.object
<CustomObject>
    <fields>
        <fullName>Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>MUSW__Inspection__c</referenceTo>
        <relationshipLabel>Associated Licensees</relationshipLabel>
        <relationshipName>Associated_Licensees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
         <fullName>License_Status__c</fullName>
        <formula>TEXT(License__r.MUSW__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Associated Licensees</relationshipLabel>
        <relationshipName>Associated_Licensees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Licensee_Name__c</fullName>
        <formula>License__r.MUSW__Primary_Licensee__r.First_Name_Primary_Contact__c + &quot; &quot; + License__r.MUSW__Primary_Licensee__r.Last_Name_Primary_Contact__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensee Name</label>
        <type>Text</type>
    </fields>
    <label>Associated Licensee</label>
    <nameField>
        <displayFormat>{YY}-{MM}-{000000}</displayFormat>
        <label>Associated Licensee Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Licensees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>